// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tool snapshot 1`] = `
<DocumentFragment>
  <div
    class="item "
  >
    <button
      class="item_button"
      data-testid="react_icon_button"
    >
      <img
        alt="react"
        data-nimg="1"
        decoding="async"
        height="32"
        loading="lazy"
        src="/tools/react.svg"
        style="color: transparent;"
        width="32"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tool snapshot selected 1`] = `
<DocumentFragment>
  <div
    class="item selected"
  >
    <button
      class="item_button"
      data-testid="react_icon_button"
    >
      <img
        alt="react"
        data-nimg="1"
        decoding="async"
        height="32"
        loading="lazy"
        src="/tools/react.svg"
        style="color: transparent;"
        width="32"
      />
    </button>
  </div>
</DocumentFragment>
`;
